test_suite/alan-2022-examples/failing/003510_mutation.alan
source J begin if 11 then relax elsif 59280 then boolean j; relax end end
